# ai-model-sentinel

./: .dockerignore  .env  .env.example  .env.production  .gitignore  API_DOCUMENTATION.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile.txt  NOTICE.txt  README.md  README_backup.md  TESTING.md  advanced_analyzer.py  advanced_database.py  advanced_database_fixed.py  advanced_test.js  analytics_data.duckdb.wal  api_documentor.py  app.py  architecture_diagram.py  auto_backup.bat  auto_backup_fixed.bat  backblaze_fix.py  background-service.js  baseline_result.json  build_and_upload.py  check_files.py  compatibility_report.txt  compatibility_report_simple.txt  comprehensive_doc_generator.py  comprehensive_test.py  config.yaml  core_engine.py  correct_test.py  create_compatibility_test.py  create_compatibility_test_simple.py  create_pypi_files.py  (+133 more)
acceleration/: __init__.py  gpu_accelerator.py
analytics/: __init__.py  drift_detector.py
api/: __init__.py
app/: __init__.py  ai_sentinel_enterprise.py  database.py  main.py  security.py
community/: __init__.py  anonymous_client.py  threat_intelligence.py  update_manager.py
config/: __init__.py  database_config.py  grafana-dashboard.yml  grafana-datasource.yml  init-db.sql  language_config.py  production.py  production_config.yaml  prometheus.yml  settings.py  settings_fixed.py
core/: __init__.py  _version.py  adaptive_persona.py  advanced_scanner.py  database.py  defense_engine.py  enterprise_scanner.py  feature_extractor.py  quantum_engine.py  response_engine.py  sentinel.py  threat_detector.py
(+169 files in other folders)
