[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-model-sentinel"
version = "2.0.0"
description = "Enterprise AI Model Monitoring and Security System"
authors = [
    {name = "Saleh Asaad Abughabr", email = "saleh87alally@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["ai", "machine-learning", "security", "monitoring", "quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
quantum = ["qiskit>=0.34.0"]
security = ["cryptography>=3.4.0"]
ml = ["tensorflow>=2.6.0", "torch>=1.9.0"]

[project.urls]
Homepage = "https://github.com/SalehAsaadAbughabraa/ai-model-sentinel"

[project.scripts]
ai-sentinel = "app.main:main"
